<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:padding="10dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/lumen_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_blue"
        android:elevation="4dp"
        android:padding="0dp"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/onboarding_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/onboarding"
            android:textColor="@color/yellow"
            android:textSize="@dimen/title_appbar"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/pick_topics_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/pick_topics"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/topics_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/topics"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <ToggleButton
                android:id="@+id/toggleButton2"
                android:background="@drawable/toggle_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/toggle_color"
                android:textOff="@string/technology"
                android:textOn="@string/technology" />

            <ToggleButton
                android:id="@+id/toggleButton3"
                android:background="@drawable/toggle_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/toggle_color"
                android:textOff="@string/science"
                android:textOn="@string/science" />

            <ToggleButton
                android:id="@+id/toggleButton4"
                android:background="@drawable/toggle_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/toggle_color"
                android:textOff="@string/politics"
                android:textOn="@string/politics" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <ToggleButton
                android:id="@+id/toggleButton5"
                android:background="@drawable/toggle_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/toggle_color"
                android:textOff="@string/world"
                android:textOn="@string/world" />

            <ToggleButton
                android:id="@+id/toggleButton6"
                android:background="@drawable/toggle_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/toggle_color"
                android:textOff="@string/business"
                android:textOn="@string/business" />

            <ToggleButton
                android:id="@+id/toggleButton7"
                android:background="@drawable/toggle_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/toggle_color"
                android:textOff="@string/health"
                android:textOn="@string/health" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <ToggleButton
                android:id="@+id/toggleButton8"
                android:background="@drawable/toggle_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/toggle_color"
                android:textOff="@string/climate"
                android:textOn="@string/climate" />

            <ToggleButton
                android:id="@+id/toggleButton9"
                android:background="@drawable/toggle_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/toggle_color"
                android:textOff="@string/sport"
                android:textOn="@string/sport" />

            <ToggleButton
                android:id="@+id/toggleButton10"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/sources_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/sources"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>


</LinearLayout>